aprendiendo a controlar los perfiles de aplication properties, para distinguir entorno dev, de prod y default, también creando una arquitectura por capas a nivel del dominio

--- a/springboot/platzi/JanniePlay/src/main/resources/application.properties
+++ b/springboot/platzi/JanniePlay/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+#De esta manera aseguramos que spring use este perfile por defecto
+spring.profiles.active=dev
+
 spring.application.name=JanniePlay
-langchain4j.open-ai.chat-model.api-key=demo
+
+#Context-Application
+server.servlet.context-path=/jannie-play/api
+
+#Langchain4j
 langchain4j.open-ai.chat-model.model-name=gpt-4o-mini
