Creando conexiòn a la base de datos con un contenedor docker, para no tener necesidad de instalar postgresql

--- a/springboot/platzi/JanniePlay/src/main/resources/application-dev.properties
+++ b/springboot/platzi/JanniePlay/src/main/resources/application-dev.properties
@@ -1,5 +1,12 @@
 spring.application.name=JanniePlay
 server.port=8090
 
+#Spring Data JPA
+spring.datasource.url=jdbc:postgresql://localhost:5432/jannieplay_db
+spring.datasource.username=artu
+spring.datasource.password=1234
+
+
 #Langchain4j
 langchain4j.open-ai.chat-model.api-key=demo
+
