--- a/springboot/platzi/JanniePlay/src/main/resources/application.properties
+++ b/springboot/platzi/JanniePlay/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.profiles.active=dev
 
 spring.application.name=JanniePlay
 
+#Postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 #Context-Application
 server.servlet.context-path=/jannie-play/api
 
