--- a/springboot/platzi/JanniePlay/build.gradle
+++ b/springboot/platzi/JanniePlay/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     // LangChain4j
     implementation 'dev.langchain4j:langchain4j-open-ai-spring-boot-starter:1.0.0-beta1'
     implementation 'dev.langchain4j:langchain4j-spring-boot-starter:1.0.0-beta1'
+	//Database
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
     runtimeOnly 'org.postgresql:postgresql'
