--- a/springboot/platzi/JanniePlay/docker-compose.yaml
+++ b/springboot/platzi/JanniePlay/docker-compose.yaml
@@ -3,11 +3,11 @@ services:
     image: 'postgres:latest'
     restart: unless-stopped
     environment:
-      - 'POSTGRES_DB=jannieplay_db'
-      - 'POSTGRES_PASSWORD=1234'
-      - 'POSTGRES_USER=artu'
+      POSTGRES_DB: ${POSTGRES_DB} #En .env definimos las variables entorno y lo añadimos a .gitignore
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-      - '5432:5432'
+      - '5433:5432'
     volumes:
       - pgdata:/data/postgresql
 volumes:
