--- a/springboot/platzi/JanniePlay/src/main/resources/application-dev.properties
+++ b/springboot/platzi/JanniePlay/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@ spring.application.name=JanniePlay
 server.port=8090
 
 #Spring Data JPA
-spring.datasource.url=jdbc:postgresql://localhost:5432/jannieplay_db
-spring.datasource.username=artu
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 
 #Langchain4j
