--- a/springboot/platzi/JanniePlay/build.gradle
+++ b/springboot/platzi/JanniePlay/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	//MapStruct
 	implementation 'org.mapstruct:mapstruct:1.6.3'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
+	//Documentación OpenApi
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
 }
 
 tasks.named('test') {
