Add configuraciones para desplegar app.

--- a/springboot/platzi/JanniePlay/src/main/resources/application.properties
+++ b/springboot/platzi/JanniePlay/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #De esta manera aseguramos que spring use este perfile por defecto
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 spring.application.name=JanniePlay
 
