--- a/springboot/platzi/JanniePlay/build.gradle
+++ b/springboot/platzi/JanniePlay/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.platzi.bdiaz'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 description = 'Construir la API de Jannie Play usando Spring'
 
 java {
