--- a/springboot/platzi/JanniePlay/src/main/resources/application-prod.properties
+++ b/springboot/platzi/JanniePlay/src/main/resources/application-prod.properties
@@ -1,5 +1,13 @@
 spring.application.name=JanniePlay
 server.port=8080
 
+spring.datasource.url=jdbc:postgresql://dpg-d44creripnbc73d5k4s0-a:5432/jannie_play_db
+spring.datasource.username=artu
+spring.datasource.password=iUf2KmDK3XmtFJnuGJSZdjmXVaKRVXrI
+
+spring.sql.init.mode=always
+
+spring.jpa.hibernate.ddl-auto=update
+
 #Langchain4j
 langchain4j.open-ai.chat-model.api-key=demo
