--- a/springboot/platzi/JanniePlay/src/main/resources/application-prod.properties
+++ b/springboot/platzi/JanniePlay/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 spring.application.name=JanniePlay
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://dpg-d44creripnbc73d5k4s0-a:5432/jannie_play_db
-spring.datasource.username=artu
-spring.datasource.password=iUf2KmDK3XmtFJnuGJSZdjmXVaKRVXrI
+spring.datasource.url=jdbc:postgresql://dpg-d44creripnbc73d5k4s0-a:5432/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 spring.sql.init.mode=always
 
