--- a/springboot/platzi/Sprint-security-learn/curso-java-spring-data-jpa/src/main/resources/application.properties
+++ b/springboot/platzi/Sprint-security-learn/curso-java-spring-data-jpa/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:${DB_PORT_MYSQL}/${DB_NAME}?createDatabaseIfNotExist=true
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+logging..level.org.springframework.security.web.*=debug
