--- a/springboot/platzi/Sprint-security-learn/curso-java-spring-data-jpa/src/main/resources/application.properties
+++ b/springboot/platzi/Sprint-security-learn/curso-java-spring-data-jpa/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-logging..level.org.springframework.security.web.*=debug
+logging.level.org.springframework.security.web.*=debug
